--- a/login.html
+++ b/login.html
@@ -5,9 +5,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
-    <link rel="stylesheet" href="./styles/login.css">
-    <title>Login - Register</title>
-    <link rel="icon" id="dynamic-favicon" type="image/png" href="img/arcaContinentalLogo.png">
+    <link rel="stylesheet" href="./styles/registrer.css">
+    <title>Modern Login Page | AsmrProg</title>
+    <style>
+        .message {
+            display: none;
+            padding: 10px;
+            margin: 10px 0;
+            border-radius: 5px;
+            text-align: center;
+        }
+
+        .message.success {
+            background-color: #d4edda;
+            color: #155724;
+        }
+
+        .message.error {
+            background-color: #f8d7da;
+            color: #721c24;
+        }
+    </style>
 </head>
 
 <body>
@@ -16,76 +34,39 @@
         <div class="form-container sign-up">
             <form id="signup-form">
                 <h1>Crear cuenta</h1>
-                <div class="social-icons">
-                    <a href="#" class="icon" id="signupGoogle"><i class="fa-brands fa-google-plus-g"></i></a>
-                    <a href="#" class="icon" id="signupFacebook"><i class="fa-brands fa-facebook-f"></i></a>
-                    <a href="#" class="icon" id="signupGithub"><i class="fa-brands fa-github"></i></a>
-                </div>
-                <span>o usa tu correo para registrarte</span>
-                <input type="text" name="name" id="name" placeholder="Nombre" required>
-                <input type="email" name="email" id="signupEmail" placeholder="Correo" required>
-                <div class="password-container">
-                    <input type="password" name="password" id="signupPassword" placeholder="Password" required>
-                    <span class="toggle-password" onclick="togglePasswordVisibility('signupPassword')">
-                        <i class="fas fa-eye"></i>
-                    </span>
-                </div>
-                <input type="date" name="fechaNac" id="fechaNac" placeholder="Fecha de Nacimiento">
-                <input type="text" name="empresa" id="departamento" placeholder="Departamento">
-                <button type="submit">Crear cuenta</button>
+                <input type="text" id="name" placeholder="Nombre" required>
+                <input type="email" id="signupEmail" placeholder="Correo" required>
+                <input type="password" id="signupPassword" placeholder="Contraseña" required>
+                <button type="submit">Registrarte</button>
+                <div id="signup-message" class="message"></div>
             </form>
         </div>
         <div class="form-container sign-in">
             <form id="signin-form">
-                <img class="amazon-logo" src="img/logos/arcalogo-removebg-preview.png">
-
+                <h1>Iniciar Sesion</h1>
                 <input type="email" id="loginEmail" placeholder="Email" required>
-                <div class="password-container">
-                    <input type="password" id="loginPassword" placeholder="Password" required>
-                    <span class="toggle-password" onclick="togglePasswordVisibility('loginPassword')">
-                        <i class="fas fa-eye"></i>
-                    </span>
-                </div>
-                <button type="submit" id="loginButton">Iniciar sesión</button>
+                <input type="password" id="loginPassword" placeholder="Password" required>
+                <button type="submit">Iniciar Sesion</button>
+                <div id="signin-message" class="message"></div>
             </form>
         </div>
         <div class="toggle-container">
             <div class="toggle">
                 <div class="toggle-panel toggle-left">
                     <h1>Bienvenido de nuevo!</h1>
-                    <p>Para mantenerse conectado con nosotros, inicie sesión con su información personal</p>
-                    <button class="ghost" id="login">Iniciar Sesión</button>
+                    <p>Ingresa tu información personal</p>
+                    <button class="hidden" id="login">Sign In</button>
                 </div>
-                <div id="izq-container" class="toggle-panel toggle-right">
-                    <h1>Acceso exclusivo</h1>
-                    <p>Este portal es solo para usuarios registrados. Por favor, contacte con nosotros para más información.</p>
-                    <p>Monterrey: + 52(81) 8329-5960</p>
-                    <p>Resto de Mx: 01800-800-3442</p>
-                    <p>Argentina: 0810-888-2722</p>
-                    <p>Ecuador: 1800-26-2226</p>
+                <div class="toggle-panel toggle-right">
+                    <h1>Hola usuario</h1>
+                    <p>Te invitamos a registrarte y conocer mas de nosotros!</p>
+                    <button class="hidden" id="register">Registrarte</button>
                 </div>
             </div>
         </div>
     </div>
-    <script>
-        document.getElementById('register').addEventListener('click', () => {
-            document.getElementById('container').classList.add('active');
-        });
 
-        document.getElementById('login').addEventListener('click', () => {
-            document.getElementById('container').classList.remove('active');
-        });
-
-        function togglePasswordVisibility(passwordInputId) {
-            const input = document.getElementById(passwordInputId);
-            const isPasswordVisible = input.type === 'password';
-            input.type = isPasswordVisible ? 'text' : 'password';
-            const icon = document.querySelector(`#${passwordInputId} + .toggle-password i`);
-
-            icon.classList.toggle('fa-eye');
-            icon.classList.toggle('fa-eye-slash');
-        }
-    </script>
+    <script type="module" src="login.js"></script>
 </body>
 
 </html>
