--- a/main.html
+++ b/main.html
@@ -22,7 +22,7 @@
                     <a href="promociones.html">Promociones</a>
                     <a href="orders.html">Pedidos</a>
                     <a href="intereses.html">Mi cuenta</a>
-                    <a href="login.html" class="loginBtn">Iniciar Sesión</a>
+                    <a href="login.html" class="loginBtn">Cerrar Sesión</a>
                 </nav>
                 <div class="hamburger-menu">
                     <ion-icon name="menu" onclick="toggleMenu()"></ion-icon>
