--- a/shopping.html
+++ b/shopping.html
@@ -35,15 +35,15 @@
     </div>
 
     <main>
-        <h1>Shopping Cart</h1>
+        <h1>Carrito de compras</h1>
 
         <div class="shopping-cart">
             <div class="column-labels">
-                <label class="product-image">Image</label>
-                <label class="product-details">Product</label>
-                <label class="product-price">Price</label>
-                <label class="product-quantity">Quantity</label>
-                <label class="product-removal">Remove</label>
+                <label class="product-image">Imagen</label>
+                <label class="product-details">Producto</label>
+                <label class="product-price">Precio</label>
+                <label class="product-quantity">Cantidad</label>
+                <label class="product-removal">Eliminar</label>
                 <label class="product-line-price">Total</label>
             </div>
         </div>
@@ -54,15 +54,15 @@
                 <div class="totals-value" id="cart-subtotal">0</div>
             </div>
             <div class="totals-item">
-                <label>Tax (5%)</label>
+                <label>Iva</label>
                 <div class="totals-value" id="cart-tax">0</div>
             </div>
             <div class="totals-item">
-                <label>Shipping</label>
+                <label>envio</label>
                 <div class="totals-value" id="cart-shipping">15.00</div>
             </div>
             <div class="totals-item totals-item-total">
-                <label>Grand Total</label>
+                <label>Total</label>
                 <div class="totals-value" id="cart-total">0</div>
             </div>
         </div>
