--- a/productos.html
+++ b/productos.html
@@ -46,25 +46,25 @@
             <div class="category">
                 <h2>Refrescos</h2>
                 <div class="product-grid">
-                    <div class="product" data-product="Coca Cola">
+                    <div class="product" data-product="Pack 24 Coca Cola">
                         <img src="img/productos/coca-cola.png.webp" alt="Coca Cola">
-                        <p class="product-name">Coca Cola</p>
-                        <p class="product-price">$18.00</p>
-                        <p class="product-volume">(600ml)</p>
+                        <p class="product-name">Pack 24 Coca Cola</p>
+                        <p class="product-price">$432.00</p>
+                        <p class="product-volume">(24x600ml)</p>
                         <button class="buy-button" onclick="addToCart(event, this)">Comprar</button>
                     </div>
-                    <div class="product" data-product="Fanta">
+                    <div class="product" data-product="Pack 24 Fanta">
                         <img src="img/productos/Fanta.webp" alt="Fanta">
-                        <p class="product-name">Fanta</p>
-                        <p class="product-price">$17.00</p>
-                        <p class="product-volume">(600ml)</p>
+                        <p class="product-name">Pack 24 Fanta</p>
+                        <p class="product-price">$408.00</p>
+                        <p class="product-volume">(24x600ml)</p>
                         <button class="buy-button" onclick="addToCart(event, this)">Comprar</button>
                     </div>
-                    <div class="product" data-product="Fresca">
+                    <div class="product" data-product="Pack 24 Fresca">
                         <img src="img/productos/Fresca.jpg.webp" alt="Fresca">
-                        <p class="product-name">Fresca</p>
-                        <p class="product-price">$16.00</p>
-                        <p class="product-volume">(600ml)</p>
+                        <p class="product-name">Pack 24 Fresca</p>
+                        <p class="product-price">$384.00</p>
+                        <p class="product-volume">(24x600ml)</p>
                         <button class="buy-button" onclick="addToCart(event, this)">Comprar</button>
                     </div>
                 </div>
@@ -73,25 +73,25 @@
             <div class="category">
                 <h2>Bebidas Energéticas</h2>
                 <div class="product-grid">
-                    <div class="product" data-product="Powerade Moras">
+                    <div class="product" data-product="Pack 12 Powerade Moras">
                         <img src="img/productos/powerademoras.webp" alt="Powerade Moras">
-                        <p class="product-name">Powerade Moras</p>
-                        <p class="product-price">$20.00</p>
-                        <p class="product-volume">(500ml)</p>
+                        <p class="product-name">Pack 12 Powerade Moras</p>
+                        <p class="product-price">$240.00</p>
+                        <p class="product-volume">(12x500ml)</p>
                         <button class="buy-button" onclick="addToCart(event, this)">Comprar</button>
                     </div>
-                    <div class="product" data-product="Powerade Lima">
+                    <div class="product" data-product="Pack 12 Powerade Lima">
                         <img src="img/productos/30691424-800-auto.webp" alt="Powerade Lima">
-                        <p class="product-name">Powerade Lima</p>
-                        <p class="product-price">$20.00</p>
-                        <p class="product-volume">(500ml)</p>
+                        <p class="product-name">Pack 12 Powerade Lima</p>
+                        <p class="product-price">$240.00</p>
+                        <p class="product-volume">(12x500ml)</p>
                         <button class="buy-button" onclick="addToCart(event, this)">Comprar</button>
                     </div>
-                    <div class="product" data-product="Powerade Frut">
+                    <div class="product" data-product="Pack 12 Powerade Frut">
                         <img src="img/productos/frut.webp" alt="Powerade Frut">
-                        <p class="product-name">Powerade Frut</p>
-                        <p class="product-price">$20.00</p>
-                        <p class="product-volume">(500ml)</p>
+                        <p class="product-name">Pack 12 Powerade Frut</p>
+                        <p class="product-price">$240.00</p>
+                        <p class="product-volume">(12x500ml)</p>
                         <button class="buy-button" onclick="addToCart(event, this)">Comprar</button>
                     </div>
                 </div>
@@ -100,25 +100,25 @@
             <div class="category">
                 <h2>Cafés</h2>
                 <div class="product-grid">
-                    <div class="product" data-product="Cafe Black">
+                    <div class="product" data-product="Pack 6 Cafe Black">
                         <img src="img/productos/black.webp" alt="Cafe Black">
-                        <p class="product-name">Cafe Black</p>
-                        <p class="product-price">$35.00</p>
-                        <p class="product-volume">(355ml)</p>
+                        <p class="product-name">Pack 6 Cafe Black</p>
+                        <p class="product-price">$210.00</p>
+                        <p class="product-volume">(6x355ml)</p>
                         <button class="buy-button" onclick="addToCart(event, this)">Comprar</button>
                     </div>
-                    <div class="product" data-product="Escapes">
+                    <div class="product" data-product="Pack 6 Escapes">
                         <img src="img/productos/escapes2.avif" alt="Escapes">
-                        <p class="product-name">Escapes</p>
-                        <p class="product-price">$30.00</p>
-                        <p class="product-volume">(355ml)</p>
+                        <p class="product-name">Pack 6 Escapes</p>
+                        <p class="product-price">$180.00</p>
+                        <p class="product-volume">(6x355ml)</p>
                         <button class="buy-button" onclick="addToCart(event, this)">Comprar</button>
                     </div>
-                    <div class="product" data-product="Illy">
+                    <div class="product" data-product="Pack 6 Illy">
                         <img src="img/productos/illy.webp" alt="Illy">
-                        <p class="product-name">Illy</p>
-                        <p class="product-price">$40.00</p>
-                        <p class="product-volume">(355ml)</p>
+                        <p class="product-name">Pack 6 Illy</p>
+                        <p class="product-price">$240.00</p>
+                        <p class="product-volume">(6x355ml)</p>
                         <button class="buy-button" onclick="addToCart(event, this)">Comprar</button>
                     </div>
                 </div>
@@ -127,25 +127,25 @@
             <div class="category">
                 <h2>Jugos y Bebidas de Frutas</h2>
                 <div class="product-grid">
-                    <div class="product" data-product="Del Valle Durazno">
+                    <div class="product" data-product="Pack 12 Del Valle Durazno">
                         <img src="img/productos/valledurazno.webp" alt="Del Valle Durazno">
-                        <p class="product-name">Del Valle Durazno</p>
-                        <p class="product-price">$22.00</p>
-                        <p class="product-volume">(500ml)</p>
+                        <p class="product-name">Pack 12 Del Valle Durazno</p>
+                        <p class="product-price">$264.00</p>
+                        <p class="product-volume">(12x500ml)</p>
                         <button class="buy-button" onclick="addToCart(event, this)">Comprar</button>
                     </div>
-                    <div class="product" data-product="Del Valle Piña">
+                    <div class="product" data-product="Pack 12 Del Valle Piña">
                         <img src="img/productos/delpiña.webp" alt="Del Valle Piña">
-                        <p class="product-name">Del Valle Piña</p>
-                        <p class="product-price">$22.00</p>
-                        <p class="product-volume">(500ml)</p>
+                        <p class="product-name">Pack 12 Del Valle Piña</p>
+                        <p class="product-price">$264.00</p>
+                        <p class="product-volume">(12x500ml)</p>
                         <button class="buy-button" onclick="addToCart(event, this)">Comprar</button>
                     </div>
-                    <div class="product" data-product="Del Valle Manzana">
+                    <div class="product" data-product="Pack 12 Del Valle Manzana">
                         <img src="img/productos/delvallmanz.webp" alt="Del Valle Manzana">
-                        <p class="product-name">Del Valle Manzana</p>
-                        <p class="product-price">$22.00</p>
-                        <p class="product-volume">(500ml)</p>
+                        <p class="product-name">Pack 12 Del Valle Manzana</p>
+                        <p class="product-price">$264.00</p>
+                        <p class="product-volume">(12x500ml)</p>
                         <button class="buy-button" onclick="addToCart(event, this)">Comprar</button>
                     </div>
                 </div>
@@ -154,25 +154,25 @@
             <div class="category">
                 <h2>Aguas</h2>
                 <div class="product-grid">
-                    <div class="product" data-product="Ciel Mineralizada">
+                    <div class="product" data-product="Pack 24 Ciel Mineralizada">
                         <img src="img/productos/cielmineralizada.webp" alt="Ciel Mineralizada">
-                        <p class="product-name">Ciel Mineralizada</p>
-                        <p class="product-price">$15.00</p>
-                        <p class="product-volume">(600ml)</p>
+                        <p class="product-name">Pack 24 Ciel Mineralizada</p>
+                        <p class="product-price">$360.00</p>
+                        <p class="product-volume">(24x600ml)</p>
                         <button class="buy-button" onclick="addToCart(event, this)">Comprar</button>
                     </div>
-                    <div class="product" data-product="Ciel Jamaica">
+                    <div class="product" data-product="Pack 24 Ciel Jamaica">
                         <img src="img/productos/cieljamainca.png" alt="Ciel Jamaica">
-                        <p class="product-name">Ciel Jamaica</p>
-                        <p class="product-price">$15.00</p>
-                        <p class="product-volume">(600ml)</p>
+                        <p class="product-name">Pack 24 Ciel Jamaica</p>
+                        <p class="product-price">$360.00</p>
+                        <p class="product-volume">(24x600ml)</p>
                         <button class="buy-button" onclick="addToCart(event, this)">Comprar</button>
                     </div>
-                    <div class="product" data-product="Ciel Naranja">
+                    <div class="product" data-product="Pack 24 Ciel Naranja">
                         <img src="img/productos/cielnaranja.webp" alt="Ciel Naranja">
-                        <p class="product-name">Ciel Naranja</p>
-                        <p class="product-price">$15.00</p>
-                        <p class="product-volume">(600ml)</p>
+                        <p class="product-name">Pack 24 Ciel Naranja</p>
+                        <p class="product-price">$360.00</p>
+                        <p class="product-volume">(24x600ml)</p>
                         <button class="buy-button" onclick="addToCart(event, this)">Comprar</button>
                     </div>
                 </div>
@@ -181,25 +181,25 @@
             <div class="category">
                 <h2>Tés</h2>
                 <div class="product-grid">
-                    <div class="product" data-product="Fuze Tea Negro">
+                    <div class="product" data-product="Pack 24 Fuze Tea Negro">
                         <img src="img/productos/fuzeteanegro.webp" alt="Fuze Tea Negro">
-                        <p class="product-name">Fuze Tea Negro</p>
-                        <p class="product-price">$18.00</p>
-                        <p class="product-volume">(600ml)</p>
+                        <p class="product-name">Pack 24 Fuze Tea Negro</p>
+                        <p class="product-price">$432.00</p>
+                        <p class="product-volume">(24x600ml)</p>
                         <button class="buy-button" onclick="addToCart(event, this)">Comprar</button>
                     </div>
-                    <div class="product" data-product="Fuze Tea Durazno">
+                    <div class="product" data-product="Pack 24 Fuze Tea Durazno">
                         <img src="img/productos/fuzeteadurazno.webp" alt="Fuze Tea Durazno">
-                        <p class="product-name">Fuze Tea Durazno</p>
-                        <p class="product-price">$18.00</p>
-                        <p class="product-volume">(600ml)</p>
+                        <p class="product-name">Pack 24 Fuze Tea Durazno</p>
+                        <p class="product-price">$432.00</p>
+                        <p class="product-volume">(24x600ml)</p>
                         <button class="buy-button" onclick="addToCart(event, this)">Comprar</button>
                     </div>
-                    <div class="product" data-product="Fuze Tea Light">
+                    <div class="product" data-product="Pack 24 Fuze Tea Light">
                         <img src="img/productos/fuzetealight.webp" alt="Fuze Tea Light">
-                        <p class="product-name">Fuze Tea Light</p>
-                        <p class="product-price">$18.00</p>
-                        <p class="product-volume">(600ml)</p>
+                        <p class="product-name">Pack 24 Fuze Tea Light</p>
+                        <p class="product-price">$432.00</p>
+                        <p class="product-volume">(24x600ml)</p>
                         <button class="buy-button" onclick="addToCart(event, this)">Comprar</button>
                     </div>
                 </div>
@@ -208,25 +208,25 @@
             <div class="category">
                 <h2>Productos Lácteos</h2>
                 <div class="product-grid">
-                    <div class="product" data-product="SCL Leche Entera">
+                    <div class="product" data-product="Pack 12 SCL Leche Entera">
                         <img src="img/productos/lecheenteraa.webp" alt="SCL Leche Entera">
-                        <p class="product-name">SCL Leche Entera</p>
-                        <p class="product-price">$22.00</p>
-                        <p class="product-volume">(1L)</p>
+                        <p class="product-name">Pack 12 SCL Leche Entera</p>
+                        <p class="product-price">$264.00</p>
+                        <p class="product-volume">(12x1L)</p>
                         <button class="buy-button" onclick="addToCart(event, this)">Comprar</button>
                     </div>
-                    <div class="product" data-product="SCL Leche Light">
+                    <div class="product" data-product="Pack 12 SCL Leche Light">
                         <img src="img/productos/lechelight.jpeg" alt="SCL Leche Light">
-                        <p class="product-name">SCL Leche Light</p>
-                        <p class="product-price">$22.00</p>
-                        <p class="product-volume">(1L)</p>
+                        <p class="product-name">Pack 12 SCL Leche Light</p>
+                        <p class="product-price">$264.00</p>
+                        <p class="product-volume">(12x1L)</p>
                         <button class="buy-button" onclick="addToCart(event, this)">Comprar</button>
                     </div>
-                    <div class="product" data-product="SCL Leche Deslac">
+                    <div class="product" data-product="Pack 12 SCL Leche Deslac">
                         <img src="img/productos/lechedeslactosada.jpeg" alt="SCL Leche Deslac">
-                        <p class="product-name">SCL Leche Deslac</p>
-                        <p class="product-price">$22.00</p>
-                        <p class="product-volume">(1L)</p>
+                        <p class="product-name">Pack 12 SCL Leche Deslac</p>
+                        <p class="product-price">$264.00</p>
+                        <p class="product-volume">(12x1L)</p>
                         <button class="buy-button" onclick="addToCart(event, this)">Comprar</button>
                     </div>
                 </div>
@@ -235,25 +235,25 @@
             <div class="category">
                 <h2>Bebidas para Niños</h2>
                 <div class="product-grid">
-                    <div class="product" data-product="Frutsi Naranja">
+                    <div class="product" data-product="Pack 24 Frutsi Naranja">
                         <img src="img/productos/frutsinaranja.webp" alt="Frutsi Naranja">
-                        <p class="product-name">Frutsi Naranja</p>
-                        <p class="product-price">$12.00</p>
-                        <p class="product-volume">(200ml)</p>
+                        <p class="product-name">Pack 24 Frutsi Naranja</p>
+                        <p class="product-price">$288.00</p>
+                        <p class="product-volume">(24x200ml)</p>
                         <button class="buy-button" onclick="addToCart(event, this)">Comprar</button>
                     </div>
-                    <div class="product" data-product="Frutsi Uva">
+                    <div class="product" data-product="Pack 24 Frutsi Uva">
                         <img src="img/productos/frutsiuva.webp" alt="Frutsi Uva">
-                        <p class="product-name">Frutsi Uva</p>
-                        <p class="product-price">$12.00</p>
-                        <p class="product-volume">(200ml)</p>
+                        <p class="product-name">Pack 24 Frutsi Uva</p>
+                        <p class="product-price">$288.00</p>
+                        <p class="product-volume">(24x200ml)</p>
                         <button class="buy-button" onclick="addToCart(event, this)">Comprar</button>
                     </div>
-                    <div class="product" data-product="Frutsi Frutas">
+                    <div class="product" data-product="Pack 24 Frutsi Frutas">
                         <img src="img/productos/frutsifrut.webp" alt="Frutsi Frutas">
-                        <p class="product-name">Frutsi Frutas</p>
-                        <p class="product-price">$12.00</p>
-                        <p class="product-volume">(200ml)</p>
+                        <p class="product-name">Pack 24 Frutsi Frutas</p>
+                        <p class="product-price">$288.00</p>
+                        <p class="product-volume">(24x200ml)</p>
                         <button class="buy-button" onclick="addToCart(event, this)">Comprar</button>
                     </div>
                 </div>
@@ -275,7 +275,7 @@
           currentIndex = (currentIndex + 1) % totalImages;
       }
 
-      setInterval(showNextImage, 2000); // Cambia la imagen cada 3 segundos
+      setInterval(showNextImage, 2000); // Cambia la imagen cada 2 segundos
     </script>
     <script>
         var copy = document.querySelector(".logos-slide").cloneNode(true);
