--- a/intereses.html
+++ b/intereses.html
@@ -31,99 +31,99 @@
         <main>
             <div class="artist-grid">
                 <div class="artist" onclick="toggleSelection(this)">
-                    <img src="img/productos/ades.webp" alt="Coca Cola">
+                    <img src="img/productos/ades.webp" alt="Ades">
                     <p>Ades</p>
                 </div>
                 <div class="artist" onclick="toggleSelection(this)">
-                    <img src="img/productos/barista.webp" alt="Fanta">
+                    <img src="img/productos/barista.webp" alt="Barista">
                     <p>Barista</p>
                 </div>
                 <div class="artist" onclick="toggleSelection(this)">
-                    <img src="img/productos/bebere.jpeg" alt="Sprite">
+                    <img src="img/productos/bebere.jpeg" alt="Bebere">
                     <p>Bebere</p>
                 </div>
                 <div class="artist" onclick="toggleSelection(this)">
-                    <img src="img/productos/burn.webp" alt="Fresca">
+                    <img src="img/productos/burn.webp" alt="Burn">
                     <p>Burn</p>
                 </div>
                 <div class="artist" onclick="toggleSelection(this)">
-                    <img src="img/productos/black.webp" alt="Powerade Moras">
+                    <img src="img/productos/black.webp" alt="Cafe Blak">
                     <p>Cafe Blak</p>
                 </div>
                 <div class="artist" onclick="toggleSelection(this)">
-                    <img src="img/productos/escapes2.avif" alt="Powerade Frut">
+                    <img src="img/productos/escapes2.avif" alt="Cafe escapes">
                     <p>Cafe escapes</p>
                 </div>
                 <div class="artist" onclick="toggleSelection(this)">
-                    <img src="img/productos/Ciel.jpeg" alt="Nuevo Producto">
+                    <img src="img/productos/Ciel.jpeg" alt="Ciel">
                     <p>Ciel</p>
                 </div>
                 <div class="artist" onclick="toggleSelection(this)">
-                    <img src="img/productos/cinabon.webp" alt="Nuevo Producto">
+                    <img src="img/productos/cinabon.webp" alt="Cinnabon">
                     <p>Cinnabon</p>
                 </div>
                 <div class="artist" onclick="toggleSelection(this)">
-                    <img src="img/productos/coca-cola.png.webp" alt="Nuevo Producto">
+                    <img src="img/productos/coca-cola.png.webp" alt="Coca Cola">
                     <p>Coca Cola</p>
                 </div>
                 <div class="artist" onclick="toggleSelection(this)">
-                    <img src="img/productos/del valle.webp" alt="Nuevo Producto">
+                    <img src="img/productos/del valle.webp" alt="Del valle">
                     <p>Del valle</p>
                 </div>
                 <div class="artist" onclick="toggleSelection(this)">
-                    <img src="img/productos/dvalle y nada.webp" alt="Nuevo Producto">
+                    <img src="img/productos/dvalle y nada.webp" alt="Dvalle y nada">
                     <p>Dvalle y nada</p>
                 </div>
                 <div class="artist" onclick="toggleSelection(this)">
-                    <img src="img/productos/Fanta.webp" alt="Nuevo Producto">
+                    <img src="img/productos/Fanta.webp" alt="Fanta">
                     <p>Fanta</p>
                 </div>
                 <div class="artist" onclick="toggleSelection(this)">
-                    <img src="img/productos/flroida.webp" alt="Nuevo Producto">
+                    <img src="img/productos/flroida.webp" alt="Florida 7">
                     <p>Florida 7</p>
                 </div>
                 <div class="artist" onclick="toggleSelection(this)">
-                    <img src="img/productos/Fresca.jpg.webp" alt="Nuevo Producto">
+                    <img src="img/productos/Fresca.jpg.webp" alt="Fresca">
                     <p>Fresca</p>
                 </div>
                 <div class="artist" onclick="toggleSelection(this)">
-                    <img src="img/productos/Frutsi.jpg.webp" alt="Nuevo Producto">
+                    <img src="img/productos/Frutsi.jpg.webp" alt="Frutsi">
                     <p>Frutsi</p>
                 </div>
                 <div class="artist" onclick="toggleSelection(this)">
-                    <img src="img/productos/fuze tea.webp" alt="Nuevo Producto">
+                    <img src="img/productos/fuze tea.webp" alt="Fuze tea">
                     <p>Fuze tea</p>
                 </div>
                 <div class="artist" onclick="toggleSelection(this)">
-                    <img src="img/productos/illy.webp" alt="Nuevo Producto">
+                    <img src="img/productos/illy.webp" alt="Illy">
                     <p>Illy</p>
                 </div>
                 <div class="artist" onclick="toggleSelection(this)">
-                    <img src="img/productos/joya.webp" alt="Nuevo Producto">
+                    <img src="img/productos/joya.webp" alt="Joya">
                     <p>Joya</p>
                 </div>
                 <div class="artist" onclick="toggleSelection(this)">
-                    <img src="img/productos/monster.webp" alt="Nuevo Producto">
+                    <img src="img/productos/monster.webp" alt="Monster">
                     <p>Monster</p>
                 </div>
                 <div class="artist" onclick="toggleSelection(this)">
-                    <img src="img/productos/powerademoras.webp" alt="Nuevo Producto">
+                    <img src="img/productos/powerademoras.webp" alt="Powerade">
                     <p>Powerade</p>
                 </div>
                 <div class="artist" onclick="toggleSelection(this)">
-                    <img src="img/productos/sidral.webp" alt="Nuevo Producto">
+                    <img src="img/productos/sidral.webp" alt="Sidral">
                     <p>Sidral</p>
                 </div>
                 <div class="artist" onclick="toggleSelection(this)">
-                    <img src="img/productos/Sprite.jpg" alt="Nuevo Producto">
+                    <img src="img/productos/Sprite.jpg" alt="Sprite">
                     <p>Sprite</p>
                 </div>
                 <div class="artist" onclick="toggleSelection(this)">
-                    <img src="img/productos/topo.webp" alt="Nuevo Producto">
+                    <img src="img/productos/topo.webp" alt="Topo Chico">
                     <p>Topo Chico</p>
                 </div>
                 <div class="artist" onclick="toggleSelection(this)">
-                    <img src="img/productos/valle fruit.jpeg" alt="Nuevo Producto">
+                    <img src="img/productos/valle fruit.jpeg" alt="Valle Fruit">
                     <p>Valle Fruit</p>
                 </div>
             </div>
