--- a/shopping.html
+++ b/shopping.html
@@ -102,7 +102,7 @@
             document.getElementById('payment-popup').style.display = 'none';
         }
     
-        // Añade evento al botón de finalizar pedido
+        // Añade evento al botón para finalizar pedido
         document.querySelector('.checkout').addEventListener('click', function(event) {
             event.preventDefault(); // Evita la acción por defecto del botón
             openPopup();
