--- a/shopping.html
+++ b/shopping.html
@@ -108,7 +108,7 @@
             openPopup();
         });
     
-        // Manejo del formulario de pago
+        // Manejo del formulario de pagoo
         document.getElementById('payment-form').addEventListener('submit', function(event) {
             event.preventDefault();
             alert('Pago realizado con éxito');
